# Jarvis

./: .travis.yml  BluetoothHC05.cpp  BluetoothHC05.h  CMakeLists.txt  Client.cpp  JsonParser.h  README.md  Server.cpp  curl.h  gulpfile.js  index.html  keywords.txt  lol.txt  main.cpp  makefile  makefiles  package.json  record.py  speech_kit.cpp  test.cpp
Arduino/: magic.sh
BluetoothHC051/: BluetoothHC05.h  keywords.txt
Device/: keywords.txt
EasyA/: EasyA.cpp  keywords.txt
Jarvis/: CMakeLists.txt
Jarvis/conf/: speechkit.json
Jarvis/docs/docbook/: Command_8hpp.xml  Jarvis_8hpp.xml  classJarvis.xml  classJarvis_1_1Commands_1_1Command.xml  classJarvis_1_1Parser.xml  namespaceCommands.xml  namespaceJarvis.xml  namespaceJarvis_1_1Arduino.xml  namespaceJarvis_1_1Arduino_1_1Connection.xml  namespaceJarvis_1_1Commands_1_1CommandType.xml  namespaceboost_1_1asio.xml  namespaceconnection.xml
Jarvis/docs/html/: SerialPort_8hpp_source.html  SpeechKit_8hpp_source.html  Voice_8hpp_source.html  classJarvis.html  classJarvis_1_1Arduino_1_1Connection_1_1SerialPort.html  classJarvis_1_1Jarvis.html  classJarvis_1_1Parser.html  classJarvis_1_1Sentence-members.html  classJarvis_1_1Sentence.html  classJarvis_1_1Voice-members.html  classJarvis_1_1Voice.html  classes.html  functions_type.html  index.html  menudata.js  namespaceArduino.html  namespaceCommands.html  namespaceconnection.html  namespacemembers.html  namespaces.html
Jarvis/docs/html/search/: all_10.js  all_12.js  all_2.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_4.js  functions_5.js  functions_8.js  functions_b.js  namespaces_0.js  namespaces_2.js  related_0.html  related_0.js  related_1.html  related_1.js  related_2.html
Jarvis/docs/latex/: annotated.tex  classJarvis_1_1Arduino_1_1Connection_1_1SerialPort.tex  classJarvis_1_1Jarvis.tex  classJarvis_1_1Parser.tex  classJarvis_1_1Voice.tex  classJarvis_1_1connection_1_1SpeechKit.tex  classJarvis_1_1connection_1_1Transport.eps  classJarvis_1_1connection_1_1Transport.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  namespaceCommandType.tex  namespaces.tex  refman.aux  refman.idx  refman.out  refman.tex  refman.toc
Jarvis/include/: Command.hpp  MediatorCreator.hpp  SpeechKit.hpp  Voice.hpp
Jarvis/scripts/: hello.sh  magic.sh  record.py
Jarvis/src/: Jarvis.cpp  Transport.cpp  Voice.cpp
SmartHome/: CMakeLists.txt
SmartHome/Arduino/: start.sh
SmartHome/Arduino/libraries/HighwayToHell/: HighwayToHell.h  keywords.txt
SmartHome/Arduino/libraries/Led/: keywords.txt
SmartHome/docs/docbook/: SerialPort_8hpp.xml  Voice_8hpp.xml  classJarvis_1_1Jarvis.xml  classJarvis_1_1Sentence.xml  namespaceJarvis_1_1Commands.xml  namespaceJarvis_1_1connection.xml
SmartHome/docs/html/: Sentence_8hpp_source.html  classJarvis_1_1Commands_1_1Command-members.html  classJarvis_1_1connection_1_1SpeechKit.html  classJarvis_1_1connection_1_1Transport.html  functions_func.html  functions_rela.html  namespaceCommandType.html  namespaceJarvis.html
SmartHome/docs/html/search/: all_11.js  all_3.js  functions_9.js  functions_f.js  namespaces_1.js  variables_0.js
SmartHome/docs/latex/: classJarvis_1_1Commands_1_1Command.tex  classJarvis_1_1Jarvis.eps  hierarchy.tex  namespaceJarvis.tex
SmartHome/include/: ArduinoCommands.hpp  ArduinoMediator.hpp  BluetoothHC05.hpp  Commands.hpp  DevicesController.hpp  Jarvis.hpp  Mediator.hpp  MediatorCreator.hpp  Parser.hpp  SerialPort.hpp  States.hpp  Transport.hpp  Voice.hpp
SmartHome/include/Arduino/: ArduinoCommands.hpp
SmartHome/include/Devices/: Bulb.hpp  Device.hpp  Devices.hpp  Fan.hpp  Module.hpp  Radio.hpp  States.hpp  Teapot.hpp  TemperatureModule.hpp
SmartHome/src/: Arduino.cpp  ArduinoCommands.cpp  BluetoothHC05.cpp  Bulb.cpp  Commands.cpp  Device.cpp  Devices.cpp  DevicesController.cpp  Fan.cpp  MediatorCreate.cpp  Module.cpp  Radio.cpp  SerialPort.cpp  SpeechKit.cpp  States.cpp  Teapot.cpp  TemperatureModule.cpp  Transport.cpp
SmartHome/tests/: test.cpp
Voice/: CMakeLists.txt  JsonParser.hpp  Transport.h  Transport.hpp  configuration.json  main.cpp  makefile  speechkit.json  synthesis.txt  test  test.sh  test.txt
Voice/Include/: Sentence.hpp  SpeechKit.hpp  Transport.hpp  Voice.hpp
Voice/Jarvis/: Command.hpp  JsonParser.hpp  OptionsList.hpp  Parser.hpp  Sentence.hpp  SerialPort.hpp  SpeechKit.hpp  Transport.hpp  run.cpp
Voice/Jarvis/Include/: Command.h  CommandPython.h  JsonParser.h  Parser.h  SerialPort.h  SpeechKit.h  Transport.h  Voice.h
Voice/JsonParser/: JsonParser.h
Voice/ProtocolBuffers/ConnectionResponse/: ConnectionResponse.pb.h
Voice/Scripts/: record.py  startArduino.sh
Voice/Source/: Command.cpp  OptionsList.cpp  Parser.cpp  Sentence.cpp  SerialPort.cpp  SpeechKit.cpp  Transport.cpp  Voice.cpp  run.cpp
Voice/Tests/: CMakeLists.txt  main.cpp
Voice/Transport/: Transport.h  Transport.hpp
Voice/conf/: speechkit.json  voiceJarvis.json
Voice/docs/docbook/: SpeechKit_8hpp.xml  classJarvis_1_1connection_1_1Transport.xml  classboost_1_1noncopyable.xml  index.xml
Voice/docs/html/: Command_8hpp_source.html  Jarvis_8hpp_source.html  classJarvis_1_1Commands_1_1Command.html  files.html
Voice/docs/html/search/: functions_6.js  functions_c.js  searchdata.js
Voice/docs/latex/: classJarvis_1_1connection_1_1SpeechKit.eps  namespaceArduino.tex  namespaceCommands.tex  namespaceconnection.tex
Voice/include/: Arduino.hpp  ArduinoCommands.hpp  ArduinoMediator.hpp  Command.hpp  Commands.hpp  Jarvis.hpp  MediatorCreator.hpp  Sentence.hpp  SerialPort.hpp  SpeechKit.hpp  States.hpp  Transport.hpp  Voice.hpp  YandexSpeechKitMediator.hpp
Voice/scripts/: goodbye.sh  record.py
Voice/src/: ArduinoCommands.cpp  Command.cpp  Commands.cpp  Jarvis.cpp  MediatorCreate.cpp  Parser.cpp  Sentence.cpp  SerialPort.cpp  States.cpp  Transport.cpp  Voice.cpp  YandexSpeechKitMediator.cpp  run.cpp
Voice/tests/: JarvisTest.cpp  main.cpp
Voice/top_include/: Command.hpp  Sentence.hpp
Voice_PB/: test  (+9 more)
(+204 files in other folders)
